<resources>
    <string name="app_name">三人行</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="login_success">登录成功</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码？</string>
    <string name="go">登录</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">注册</string>

    <string name="main_tab_recent">消息</string>
    <string name="main_tab_contact">首页</string>
    <string name="main_tab_share">学圈</string>
    <string name="main_tab_set">我的</string>

    <string name="add_avatar">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新朋友</string>

    <string name="chat">与他交流</string>
    <string name="add_friend">添加好友</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <!--图片选择器-->
    <string name="mis_folder_all">所有图片</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">确定</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>


    <string name="select_images">选择图片</string>
    <string name="gif_make">GIF制作</string>

    <!--image-selector-->
    <string name="folder_all">所有图片</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="action_done">Done</string>
    <string name="photo_unit">Shot</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="class_string">
        <item>小学</item>
        <item>中学</item>
        <item>高中</item>
        <item>大学</item>
    </string-array>

    <string-array name="grade_string">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="subject">
        <item>语文</item>
        <item>英文</item>
        <item>数学</item>
        <item>物理</item>
        <item>化学</item>
        <item>生物</item>
        <item>政治</item>
        <item>历史</item>
        <item>地理</item>
    </string-array>

    <string-array name="diploma">
        <item>小学</item>
        <item>中学</item>
        <item>高中</item>
        <item>专科</item>
        <item>本科</item>
        <item>研究所</item>
        <item>博士</item>
    </string-array>
</resources>
