<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <!--fragment的容器-->
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/tab_contact_btn"
                android:gravity="center"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_contact"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_home_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:background="@mipmap/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="invisible"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/btn_conversation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/tab_message_btn"
                android:gravity="center"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_recent"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/iv_conversation_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:background="@mipmap/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="visible"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:padding="6dp"
            android:layout_height="80dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/circle2"
                android:padding="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/btn_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/add_icon_200"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

        </RelativeLayout>



        <TextView
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_discover_btn"
            android:gravity="center"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_share"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_set_btn"
            android:gravity="center"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_set"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="12sp" />
    </LinearLayout>

  <!--  <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:clipChildren="false"
        android:layout_above="@id/main_bottom"
        android:background="#f1f1f1"
        android:orientation="horizontal">
    </LinearLayout>-->

</RelativeLayout>